Added a Make Play Live provider and service

--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -1,2 +1,3 @@
 install(FILES twitter.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES identica.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
+install(FILES makeplaylive.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
