--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,2 +1,3 @@
 install(FILES twitter-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES identica-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES makeplaylive-bodega.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
