Added Runners ID service

--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,3 +1,7 @@
 install(FILES twitter-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES identica-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES makeplaylive-bodega.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES runners-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES runners-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES runners-music.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES runners-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
