Use the same servicetype in both twitter and identica.
Since both use twitter api, lets use twitter-microblog

--- a/services/identica-microblog.service
+++ b/services/identica-microblog.service
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="identica-microblog">
-  <type>microblogging</type>
+  <type>twitter-microblog</type>
   <name>identi.ca</name>
   <icon>identica</icon>
   <provider>identica</provider>
