--- a/services/twitter-microblog.service
+++ b/services/twitter-microblog.service
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="twitter-microblog">
-  <type>microblogging</type>
+  <type>twitter-microblog</type>
   <name>Twitter</name>
   <icon>twitter</icon>
   <provider>twitter</provider>
