Fix Facebook provider for IM chat

--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -10,3 +10,4 @@ install(FILES facebook-events.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-feed.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-notes.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-notifications.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES facebook-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
