Added Google provider.

--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -3,3 +3,4 @@ install(FILES identica.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES makeplaylive.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES runnersid.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES facebook.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
+install(FILES google.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
