--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -6,6 +6,9 @@ install(FILES runners-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES runners-music.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES runners-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES owncloud-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES owncloud-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES owncloud-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-events.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-feed.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-notes.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
