Indicate the host in dav/host within storage service

--- a/services/runners-storage.service
+++ b/services/runners-storage.service
@@ -8,6 +8,7 @@
   
   <template>
     <group name="dav">
+        <setting name="host">myowncloud.com</setting>
       <setting name="path">/remote.php/webdav/</setting>
     </group>
   </template>
