Install signon-ui config file for facebook
We have to move away from signon-ui (fork it, create our own, whatev) as
soon as possible, but while we do it we need to install these config
files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ include(KDE4Defaults)
 add_subdirectory(icons)
 add_subdirectory(services)
 add_subdirectory(providers)
+add_subdirectory(webkit-options)
