--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -14,3 +14,7 @@ install(FILES facebook-feed.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-notes.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-notifications.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES facebook-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES google-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES google-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES google-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES google-todo.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
