Remove google-todo provider, as we provide tasks together with calendar in the Akonadi resource

--- a/services/google-calendar.service
+++ b/services/google-calendar.service
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="google-calendar">
   <type>google-calendar</type>
-  <name>Calendar</name>
+  <name>Calendars and Tasks</name>
   <icon>google-calendars</icon>
   <provider>google</provider>
   <translations>kde-account-plugins</translations>
