Add support for Jabber IM accounts

--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -4,3 +4,4 @@ install(FILES runnersid.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES facebook.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES google.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
 install(FILES owncloud.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
+install(FILES ktp-jabber.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
