--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -16,3 +16,4 @@ install(FILES facebook-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES google-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES google-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
 install(FILES google-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+install(FILES ktp-jabber-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
