Make the provider & service files translatable
We'll use intltools for extracting the translatable strings for KDE's
i18n. However that needs to have the translatable tags marked with
leading underscore (eg. <_description>); these xml files are then unable
to be parsed by AccountsSSO, so we use the intltool-merge to recreate
the files with translations merged in (english), making it loadable by
AccountsSSO.

It's the same mechanism that Ubuntu uses for translations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(ECM 1.0.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules" ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
 
 find_package(AccountsFileDir REQUIRED)
+find_package(Intltool REQUIRED)
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
