--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,19 +1,7 @@
-install(FILES twitter-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES identica-microblog.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES runners-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES runners-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES runners-music.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES runners-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES owncloud-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES owncloud-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES owncloud-storage.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES facebook-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES facebook-events.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES facebook-feed.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES facebook-notes.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES facebook-notifications.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES facebook-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES google-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES google-contacts.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-# install(FILES google-calendar.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
-install(FILES ktp-jabber-im.service DESTINATION ${ACCOUNTS_SERVICES_DIR})
+file(GLOB service_files_in *.service.in)
+foreach(service_file_in ${service_files_in})
+    get_filename_component(service_filename ${service_file_in} NAME_WE)
+    set(service_file ${CMAKE_CURRENT_BINARY_DIR}/${service_filename}.service)
+    execute_process(COMMAND intltool-merge -x -u --no-translations ${service_file_in} ${service_file})
+    install(FILES ${service_file} DESTINATION ${ACCOUNTS_SERVICES_DIR})
+endforeach()
