--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -1,7 +1,7 @@
-install(FILES twitter.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES identica.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES runnersid.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES facebook.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES google.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES owncloud.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-install(FILES ktp-jabber.provider DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
+file(GLOB provider_in_files *.provider.in)
+foreach(provider_in_file ${provider_in_files})
+    get_filename_component(provider_filename ${provider_in_file} NAME_WE)
+    set(provider_file ${CMAKE_CURRENT_BINARY_DIR}/${provider_filename}.provider)
+    execute_process(COMMAND intltool-merge -x -u --no-translations ${provider_in_file} ${provider_file})
+    install(FILES ${provider_file} DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
+endforeach()
