--- a/providers/facebook.provider.in
+++ b/providers/facebook.provider.in
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="facebook">
-  <name>Facebook</name>
+  <_name>Facebook</_name>
   <icon>facebookresource</icon>
-  <translations>account-plugins</translations>
+  <!-- Tooltip text appearing over the button to create this type of account -->
+  <_description>Includes Posts, Notes, Events, Notifications and Chat</_description>
+  <translations>kaccounts-providers</translations>
   <domains>.*facebook\.com</domains>
 
   <template>
