--- a/providers/ktp-jabber.provider.in
+++ b/providers/ktp-jabber.provider.in
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="ktp-jabber">
-    <name>Jabber</name>
+    <_name>Jabber</_name>
     <icon>im-jabber</icon>
+    <!-- Tooltip text appearing over the button to create this type of account -->
+    <_description>Jabber chat account</_description>
+    <translations>kaccounts-providers</translations>
+
     <template>
         <group name="auth">
             <setting name="method">password</setting>
