--- a/providers/twitter.provider.in
+++ b/providers/twitter.provider.in
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="twitter">
-  <name>Twitter</name>
+  <_name>Twitter</_name>
   <icon>twitter_microblog</icon>
-  <translations>kde-account-plugins</translations>
+  <!-- Tooltip text appearing over the button to create this type of account -->
+  <_description>Includes your Timeline and Mentions</_description>
+  <translations>kaccounts-providers</translations>
   <domains>.*twitter\.com</domains>
 
   <template>
