--- a/services/facebook-im.service.in
+++ b/services/facebook-im.service.in
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="facebook-im">
   <type>IM</type>
-  <name>Chat</name>
+  <!-- "Chat" on Facebook - Service name being displayed as a checkbox label to enable/disable this service
+       Would be nice to use the localized name of this service if it exists/makes sense -->
+  <_name>Chat</_name>
   <icon>facebook-im</icon>
   <provider>facebook</provider>
-  <translations>kde-account-plugins</translations>
+  <translations>kaccounts-providers</translations>
 
     <!-- default settings (account settings have precedence over these) -->
   <template>
