--- a/services/google-im.service.in
+++ b/services/google-im.service.in
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <service id="google-im">
   <type>IM</type>
-  <name>Google Hangouts</name>
+  <!-- Google Hangouts - Service name being displayed as a checkbox label to enable/disable this service
+       Would be nice to use the localized name of this service if it exists/makes sense -->
+  <_name>Google Hangouts</_name>
   <icon>im-google-talk</icon>
   <provider>google</provider>
-  <translations>account-plugins</translations>
+  <translations>kaccounts-providers</translations>
 
   <!-- default settings (account settings have precedence over these) -->
   <template>
