--- a/services/owncloud-contacts.service.in
+++ b/services/owncloud-contacts.service.in
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="owncloud-contacts">
   <type>dav-contacts</type>
-  <name>Contacts</name>
+  <!-- ownCloud's Contacts - Service name being displayed as a checkbox label to enable/disable this service
+       Would be nice to use the localized name of this service if it exists/makes sense -->
+  <_name>Contacts</_name>
   <icon>owncloud-contacts</icon>
   <provider>owncloud</provider>
-  <translations>kde-account-plugins</translations>
+  <translations>kaccounts-providers</translations>
 
   <template>
     <group name="dav">
