--- a/services/owncloud-storage.service.in
+++ b/services/owncloud-storage.service.in
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="owncloud-storage">
   <type>dav-storage</type>
-  <name>Storage</name>
+  <!-- ownCloud's Storage - Service name being displayed as a checkbox label to enable/disable this service
+       Would be nice to use the localized name of this service if it exists/makes sense -->
+  <_name>Storage</_name>
   <icon>owncloud-storage</icon>
   <provider>owncloud</provider>
-  <translations>kde-account-plugins</translations>
+  <translations>kaccounts-providers</translations>
 
   <template>
     <group name="dav">
