--- a/services/runners-calendar.service.in
+++ b/services/runners-calendar.service.in
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <service id="runnersid-calendar">
   <type>dav-calendar</type>
-  <name>Calendar</name>
+  <!-- Runners-ID Calendar - Service name being displayed as a checkbox label to enable/disable this service
+       Would be nice to use the localized name of this service if it exists/makes sense -->
+  <_name>Calendar</_name>
   <icon>runnersid-calendar</icon>
   <provider>runnersid</provider>
-  <translations>kde-account-plugins</translations>
+  <translations>kaccounts-providers</translations>
   
    <template>
      <group name="dav">
