--- a/providers/google.provider.in
+++ b/providers/google.provider.in
@@ -2,7 +2,7 @@
 <provider id="google">
   <_name>Google</_name>
   <!-- Tooltip text appearing over the button to create this type of account -->
-  <description>Includes GMail, Hangouts, Google Docs, Google+, YouTube and Picasa</description>
+  <_description>Includes GMail, Hangouts, Google Docs, Google+, YouTube and Picasa</_description>
   <icon>gmail</icon>
   <translations>kaccounts-providers</translations>
   <domains>.*google\.com</domains>
