--- a/providers/facebook.provider.in
+++ b/providers/facebook.provider.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="facebook">
   <_name>Facebook</_name>
-  <icon>facebookresource</icon>
+  <icon>im-facebook</icon>
   <!-- Tooltip text appearing over the button to create this type of account -->
   <_description>Includes Posts, Notes, Events, Notifications and Chat</_description>
   <translations>kaccounts-providers</translations>
