- Avoid install files in a root environment as a non-priviledge user
Signed-off-by: Helio Chissini de Castro <helio@kde.org>

--- a/webkit-options/CMakeLists.txt
+++ b/webkit-options/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(WEBKIT_CONFIG_DESTINATION /etc/signon-ui/webkit-options.d/)
+set(WEBKIT_CONFIG_DESTINATION ${KDE_INSTALL_FULL_SYSCONFDIR}/signon-ui/webkit-options.d/)
 install(FILES www.facebook.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
 install(FILES accounts.google.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
 install(FILES api.twitter.com.conf DESTINATION ${WEBKIT_CONFIG_DESTINATION})
