--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB service_files_in *.service.in)
 foreach(service_file_in ${service_files_in})
-    kaccount_add_service(${service_file_in})
+    kaccounts_add_service(${service_file_in})
 endforeach()
