--- a/plugins/owncloud-ui/package/metadata.desktop
+++ b/plugins/owncloud-ui/package/metadata.desktop
@@ -35,7 +35,7 @@ Name[uk]=Додаток QML KAccounts OwnCloud
 Name[x-test]=xxOwnCloud KAccounts QML pluginxx
 Name[zh_CN]=OwnCloud KAccounts QML 插件
 Name[zh_TW]=OwnCloud KAccounts QML 外掛程式
-
+Comment=Use OwnCloud with KAccounts
 Encoding=UTF-8
 Type=Service
 Icon=applications-internet
