--- a/providers/twitter.provider.in
+++ b/providers/twitter.provider.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="twitter">
   <_name>Twitter</_name>
+  <_description>Twitter</_description>
   <icon>im-twitter</icon>
   <translations>kaccounts-providers</translations>
   <domains>.*twitter\.com</domains>
