i18n: Add msgctxt attributes to split strings "Contacts"
Test Plan: Run trunk/l10n-kf5/scripts/extract-messages.sh , check contents of .pot file.

Reviewers: schwarzer, bshah, nicolasfella

Reviewed By: bshah

Subscribers: aacid

Differential Revision: https://phabricator.kde.org/D25204

--- a/services/disabled/google-contacts.service.in
+++ b/services/disabled/google-contacts.service.in
@@ -3,7 +3,7 @@
   <type>google-contacts</type>
   <!-- Google's Contacts - Service name being displayed as a checkbox label to enable/disable this service
        Would be nice to use the localized name of this service if it exists/makes sense -->
-  <_name>Contacts</_name>
+  <_name msgctxt="Google Contacts">Contacts</_name>
   <icon>google-contacts</icon>
   <provider>google</provider>
   <translations>kaccounts-providers</translations>
