Add plugin for nextcloud-login
Test Plan:
1. Apply this patch and build the project.
2. Build plasma-settings project to test the plugin.
3. Open Accounts item. Tap `Add Account` button.
4. Select nexcloud from options for nextcloud-login.

Reviewers: bshah, jbbgameich, rpatwal

Reviewed By: bshah

Subscribers: nicolasfella

Differential Revision: https://phabricator.kde.org/D21738

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,8 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules" ${ECM_MODULE_P
 find_package(Intltool REQUIRED)
 find_package(KAccounts REQUIRED)
 
-find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Core Qml)
-find_package(KF5 ${KF5_MIN_VERSION} REQUIRED KIO
-                                                  I18n
-                                                  Declarative
-                                                  Package)
+find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Core Qml WebEngineWidgets)
+find_package(KF5 ${KF5_MIN_VERSION} REQUIRED KIO I18n Declarative Package)
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
