Revert "Add plugin for nextcloud-login"
Wrong authorship information

This reverts commit 80cf2556278dfcc8a935c28691db3c8da3e00ae9.

--- a/plugins/owncloud-ui/CMakeLists.txt
+++ b/plugins/owncloud-ui/CMakeLists.txt
@@ -1,17 +1,19 @@
-include_directories(${CMAKE_CURRENT_BUILD_DIR}
+project (owncloud-ui-plugin)
+
+include_directories (${CMAKE_CURRENT_BUILD_DIR}
                      ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-set(owncloud_plugin_kaccounts_SRCS
+set (owncloud_plugin_kaccounts_SRCS
      owncloud.cpp
      qmlhelper.cpp
 )
 
-add_library(owncloud_plugin_kaccounts MODULE
+add_library (owncloud_plugin_kaccounts MODULE
              ${owncloud_plugin_kaccounts_SRCS}
 )
 
-target_link_libraries(owncloud_plugin_kaccounts
+target_link_libraries (owncloud_plugin_kaccounts
                        Qt5::Core
                        KF5::KIOCore
                        KF5::I18n
@@ -22,7 +24,7 @@ target_link_libraries(owncloud_plugin_kaccounts
 )
 
 # Install:
-install(TARGETS owncloud_plugin_kaccounts
+install (TARGETS owncloud_plugin_kaccounts
          DESTINATION ${PLUGIN_INSTALL_DIR}/kaccounts/ui
 )
 kpackage_install_package(package org.kde.kaccounts.owncloud genericqml)
