[owncloud] Align wizard UI with new Nextcloud UI
The owncloud and nextcloud UIs are conceptually similar, with the difference that nextcloud has an additional step for web login.

This patch aligns the owncloud UI with the redesigned nextcloud UI from https://invent.kde.org/network/kaccounts-providers/-/merge_requests/8

--- a/plugins/owncloud-ui/CMakeLists.txt
+++ b/plugins/owncloud-ui/CMakeLists.txt
@@ -26,3 +26,10 @@ install(TARGETS owncloud_plugin_kaccounts
          DESTINATION ${PLUGIN_INSTALL_DIR}/kaccounts/ui
 )
 kpackage_install_package(package org.kde.kaccounts.owncloud genericqml)
+
+ecm_install_icons(
+ICONS
+    256-apps-kaccounts-owncloud.png
+DESTINATION
+    ${ICON_INSTALL_DIR}
+)
