--- a/providers/nextcloud.provider.in
+++ b/providers/nextcloud.provider.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="nextcloud">
   <_name>Nextcloud</_name>
-  <icon>Nextcloud</icon>
+  <icon>kaccounts-nextcloud</icon>
   <!-- Tooltip text appearing over the button to create this type of account -->
   <_description>Nextcloud account</_description>
   <translations>kaccounts-providers</translations>
