--- a/providers/owncloud.provider.in
+++ b/providers/owncloud.provider.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <provider id="owncloud">
   <_name>ownCloud</_name>
-  <icon>owncloud</icon>
+  <icon>kaccounts-owncloud</icon>
   <!-- Tooltip text appearing over the button to create this type of account -->
   <_description>ownCloud account</_description>
   <translations>kaccounts-providers</translations>
