--- a/plugins/owncloud-ui/package/metadata.desktop
+++ b/plugins/owncloud-ui/package/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=OwnCloud KAccounts QML plugin
+Name=ownCloud
 Name[az]=OwnCloud KAccounts QML qoşması
 Name[ca]=Connector OwnCloud en QML per a KAccounts
 Name[ca@valencia]=Connector OwnCloud en QML per a KAccounts
