--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,3 @@
-project(kde-account-providers)
-
 cmake_minimum_required(VERSION 3.5)
 
 set(RELEASE_SERVICE_VERSION_MAJOR "20")
@@ -7,11 +5,16 @@ set(RELEASE_SERVICE_VERSION_MINOR "11")
 set(RELEASE_SERVICE_VERSION_MICRO "70")
 set(KACCOUNTS_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
 
-set(QT_REQUIRED_VERSION "5.2.0")
-set(KF5_MIN_VERSION "5.4.0")
+project(kde-account-providers LANGUAGES CXX VERSION ${KACCOUNTS_VERSION})
+
+set(QT_REQUIRED_VERSION "5.12.0")
+set(KF5_MIN_VERSION "5.70.0")
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules" ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules" ${ECM_MODULE_PATH})
 
 find_package(Intltool REQUIRED)
 find_package(KAccounts REQUIRED)
