Fix build with KF 5.78
kde_configure_git_pre_commit_hook is only available in unreleased KF5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,10 @@ include(FeatureSummary)
 include(ECMInstallIcons)
 include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(KDEClangFormat)
-include(KDEGitCommitHooks)
+
+if(KF5_VERSION VERSION_GREATER_EQUAL 5.79)
+    include(KDEGitCommitHooks)
+endif()
 
 add_subdirectory(services)
 add_subdirectory(providers)
@@ -38,6 +41,8 @@ add_subdirectory(plugins)
 file(GLOB_RECURSE ALL_CLANG_FORMAT_SOURCE_FILES *.cpp *.h)
 kde_clang_format(${ALL_CLANG_FORMAT_SOURCE_FILES})
 
-kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
+if(KF5_VERSION VERSION_GREATER_EQUAL 5.79)
+    kde_configure_git_pre_commit_hook(CHECKS CLANG_FORMAT)
+endif()
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
