--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -1,4 +1,5 @@
-file(GLOB provider_in_files *.provider.in)
-foreach(provider_in_file ${provider_in_files})
-    kaccounts_add_provider(${provider_in_file})
-endforeach()
+kaccounts_add_provider(google.provider.in)
+kaccounts_add_provider(owncloud.provider.in)
+if(Qt5WebEngine_FOUND)
+    kaccounts_add_provider(nextcloud.provider.in)
+endif()
