--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,4 +1,5 @@
-file(GLOB service_files_in *.service.in)
-foreach(service_file_in ${service_files_in})
-    kaccounts_add_service(${service_file_in})
-endforeach()
+kaccounts_add_service(owncloud-storage.service.in)
+if(Qt5WebEngine_FOUND)
+    kaccounts_add_service(nextcloud-contacts.service.in)
+    kaccounts_add_service(nextcloud-storage.service.in)
+endif()
