--- a/providers/CMakeLists.txt
+++ b/providers/CMakeLists.txt
@@ -1,4 +1,5 @@
 kaccounts_add_provider(google.provider.in)
+kaccounts_add_provider(dropbox.provider.in)
 kaccounts_add_provider(owncloud.provider.in)
 if(Qt5WebEngine_FOUND)
     kaccounts_add_provider(nextcloud.provider.in)
