Add auto generated files to .gitignore
Task: https://invent.kde.org/sdk/kdesrc-build/-/issues/86

GIT_SILENT

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,11 @@ random_seed
 /build*/
 CMakeLists.txt.user*
 *.unc-backup*
-.clang-format
+
+# LSP & IDE
+/.clang-format
+/compile_commands.json
+.clangd
+.cache
+.idea
+/cmake-build*
