--- a/plugins/owncloud-ui/CMakeLists.txt
+++ b/plugins/owncloud-ui/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(owncloud_plugin_kaccounts
                        KF5::KIOCore
                        KF5::I18n
                        KF5::Declarative
+                       KF5::Package
                        KAccounts
 )
 
