--- a/plugins/owncloud-ui/CMakeLists.txt
+++ b/plugins/owncloud-ui/CMakeLists.txt
@@ -4,16 +4,16 @@ add_library(owncloud_plugin_kaccounts MODULE
 )
 
 target_link_libraries(owncloud_plugin_kaccounts
-                       Qt5::Core
-                       KF5::KIOCore
-                       KF5::I18n
-                       KF5::Declarative
-                       KF5::Package
-                       KAccounts
+                       Qt::Core
+                       Qt::Quick
+                       KF6::KIOCore
+                       KF6::I18n
+                       KF6::Package
+                       KAccounts6
 )
 
 install(TARGETS owncloud_plugin_kaccounts
-         DESTINATION ${PLUGIN_INSTALL_DIR}/kaccounts/ui
+         DESTINATION ${KDE_INSTALL_PLUGINDIR}/kaccounts/ui
 )
 kpackage_install_package(package org.kde.kaccounts.owncloud genericqml)
 
@@ -21,5 +21,5 @@ ecm_install_icons(
 ICONS
     256-apps-kaccounts-owncloud.png
 DESTINATION
-    ${ICON_INSTALL_DIR}
+    ${KDE_INSTALL_ICONDIR}
 )
