--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,6 @@
 include:
   - project: sysadmin/ci-utilities
     file:
-      - /gitlab-templates/linux.yml
-      - /gitlab-templates/freebsd.yml
+      - /gitlab-templates/json-validation.yml
+      # - /gitlab-templates/linux-qt6.yml # no libaccounts-qt and friends in CI yet
+      # - /gitlab-templates/freebsd-qt6.yml
