--- a/plugins/nextcloud-ui/CMakeLists.txt
+++ b/plugins/nextcloud-ui/CMakeLists.txt
@@ -4,17 +4,17 @@ add_library(nextcloud_plugin_kaccounts MODULE
 )
 
 target_link_libraries(nextcloud_plugin_kaccounts
-                       Qt5::Core
-                       Qt5::WebEngine
-                       KF5::KIOCore
-                       KF5::I18n
-                       KF5::Declarative
-                       KF5::Package
-                       KAccounts
+                       Qt::Core
+                       KF6::KIOCore
+                       KF6::I18n
+                       KF6::Package
+                       KAccounts6
 )
 
+target_link_libraries(nextcloud_plugin_kaccounts Qt::WebEngineQuick)
+
 install(TARGETS nextcloud_plugin_kaccounts
-         DESTINATION ${PLUGIN_INSTALL_DIR}/kaccounts/ui
+         DESTINATION ${KDE_INSTALL_PLUGINDIR}/kaccounts/ui
 )
 kpackage_install_package(package org.kde.kaccounts.nextcloud genericqml)
 
@@ -22,5 +22,5 @@ ecm_install_icons(
 ICONS
     sc-apps-kaccounts-nextcloud.svg
 DESTINATION
-    ${ICON_INSTALL_DIR}
+    ${KDE_INSTALL_ICONDIR}
 )
